Making a redline, making internet of things and more

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -41,8 +41,10 @@
 	
 	% Part Solution
 	\part{Solution}
-	\input{text/hardware2.tex}
 	\input{text/systemOverviewDesign.tex}
+	\input{text/hardware2.tex}
+	\input{text/newGeneralDesignConcepts.tex}
+	\input{text/requirementsOfMom.tex}
 	\input{text/database.tex}
 	\input{text/api.tex}
 	\input{text/ArduinoDesign.tex}
