--- a/report/text/database.tex
+++ b/report/text/database.tex
@@ -13,7 +13,7 @@ In the parent control system there are seven essential objects; control system, 
 	\item[Controller]	is a object representation of the physical controller and like the tag it is identified by the serial number of the physical controller.
 	\item[Chore] is a representation of a house chore which can be carried out by a child (profile) which then gets point as a reward.
 	\item[Permission] is representing time restrictions on the controllers which some of the profiles need to abide by. 
-	\item[Rule] is representing other restriction or rules that cannot be expressed by the permission. A rule consist of some conditions that need to meet before some actions should be taken as explained previously in \vref{subsec:rule}. 
+	\item[Rule] is representing other restriction or rules that cannot be expressed by the permission. A rule consist of some conditions that need to meet before some actions should be taken as explained previously in \vref{sec:rule}. 
 \end{description}
 
 From the former description the database design is made. It is represented in a ER-diagram where the cardinality ratio is expressed in 
