--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -24,6 +24,7 @@ If this tendency is not dealt with, the risk for children getting type 2 diabete
 
 
 \section{Parental Control - How to extend it}
+\label{section:pcHowToExtend}
 As previously mentioned parental control is commonly found in televisions, computers and internet-browsers. But none of these tools is meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device.\\
 The idea behind this project, is to extend the normal parental control, so that a child has a limited usage of media, without having the constant interaction from parents. \\
 For the idea to be an improvement upon the existing parental control, it must be able to give the parents control over their children's media usage without forcing the parents to be around constantly. But simply restricting a child's media usage is not enough, for the idea to work. We believe it is also necessary to inspire the child to physical activity, maybe by helping out at the house?\\
@@ -39,7 +40,7 @@ This, coupled with the subject of this report, ''Internet of Things'' lead us to
 \end{enumerate}
 
 After we had figured out what the key features of the system was, we started brainstorming how to implement them.\\
-Feature 1. and 2. was decided to be maintained from a website with a graphical interface. This was due to the complexity of the idea and the realization that simplifying permissions and rules into something a machine would understand is a hard task and an even harder one for non-computer educates, more information on how we implemented rules can be read in section \vref{subsection:rule}.\\
+Feature 1. and 2. was decided to be maintained from a website with a graphical interface. This was due to the complexity of the idea and the realization that simplifying permissions and rules into something a machine would understand is a hard task and an even harder one for non-computer educates, more information on how we implemented rules can be read in section \vref{sec:rule}.\\
 Among other solutions could have been a desktop- or phone application.\\
 \\
 For feature 3. we came up with a few different solutions. One solution was to write code for a bunch of medias, that then would be able to work directly with the administration web-site, but this would force us to write code for every media device from every fabricator that we intended the usage of our idea on.\\
