--- a/report/text/problemStatement.tex
+++ b/report/text/problemStatement.tex
@@ -1,15 +1,26 @@
 \chapter{Problem Statement}
-
-Dansk: Forældre er ikke i stand til at hjælpe deres børn med at administrer deres IT/TV forbrug.
-Dette medfører at børn får en forringet indlæringsevne, dårlig søvn rytme og mere.
-Hvordan kan smart home teknologi give forældrer de redskaber de behøver for at hjælpe deres børn med at administrer deres IT/TV forbrug?
+As the prevues chapter explained, children's increase in media usage is becoming a problem. This is a problem we want to solve by the usage of modern technology, internet applications and physical recognition of users.\\
+In this chapter a formal definition of the problem is written together with an emphasis on what challenges this problem rises.\\
 
 
+\begin{verse}
+\textit{Parents are not able of helping their children administer their IT/TV consumption.\\
+This results in their children getting a lessened learning ability, a bad sleeping pattern and a higher risk of type 2 diabetes.\\
+How can hardware identification and webservices give parents the tools to help their children manage their media consumption?}
+	\begin{itemize}
+		\item How do we identify unique users in a subtle and child friendly way.
+		\item How do we enforce restrictions on media devices.
+		\item How do we facilitate concepts as rules, permissions and chores without parents interaction.
+	\end{itemize}
+\end{verse}
 
-English: Parents are not able of helping their children administer their IT/TV consumption.
-This results in their kids getting a lessened learning ability, a bad sleeping pattern and more.
-How can smart home technology give parents the tools they need to help their children administer their IT/TV consumption?
 
-Edited version:
-How can hardware identification and webservices give parents the tools to help their children manage their media consumption. 
-(Childrens media consumptions is increasing, giving higher risks of type 2 diabetes.
+With this formal statement of the problem in mind, the next chapter goes into detail of how we intend to solve these challenges.
+
+%English: Parents are not able of helping their children administer their IT/TV consumption.
+%This results in their kids getting a lessened learning ability, a bad sleeping pattern and more.
+%How can smart home technology give parents the tools they need to help their children administer their IT/TV consumption?
+
+%Edited version:
+%How can hardware identification and webservices give parents the tools to help their children manage their media consumption. 
+%(Childrens media consumptions is increasing, giving higher risks of type 2 diabetes.
