--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -4,7 +4,7 @@ This chapter goes into details about the design and implementation of the websit
 \section{Design}
 %Interface Design
 %What you can do from the website, and how
-As mentioned in the overview, see subsection \vref{subsection:momswebsite}, we know what the website is required to do for the system.
+As mentioned in the overview, see subsection \vref{section:momswebsite}, we know what the website is required to do for the system.
 These requirements made the basis for deciding what pages should be created and what each page's functionality should be. During the designing of the website we aimed to fit all relevant information into each page.\\
 All pages was first designed on the blackboards, where we would discover inconsistencies, new navigation paths and learn about how concepts such as rules should be implemented.\\
 Next is a short overview of what pages were designed and their purposes.\\
