--- a/report/text/hardware2.tex
+++ b/report/text/hardware2.tex
@@ -1,9 +1,9 @@
 \chapter{Hardware}
 \label{chap:hardware}
-In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, then the choice of hardware identification needed for the system. Followed each by a conclusion stating the hardware chosen.\fixme{Find a way to talk about the server to, talk about one vs several servers?}
+In this section the hardware choices of this project will be talked about and analyzed. First the choice of hardware platform will be discussed, next the choice of hardware identification needed for the system and then the server setup. Followed each by a conclusion stating the hardware chosen.\fixme{We should add something in this chapter about how the Arduino, the tag and the server communicates or at least forward reference it, this should emphasize internet of things a bit.}
 
-\subsection{Hardware Platform}
-In order to control the power to other devices(i.e. Television or Computer), some analog power control is needed. Typically this is controlled by an embedded microcontroller\fixme{Hvis det er typisk skal vi finde en kilde}, therefore the choice of hardware platform is to pick the best microcontroller for the project. During development a development board is usually used. A development board is a single printed circuit board with a microcontroller and everything needed to get the microcontroller running. Every I/O\footnote{Input/Output}(generally General-purpose I/O) of the microcontroller is also made easily available using group pins. Picking a hardware platform is then condensed into picking a development board. Following is a comparison of a few different development boards.
+\section{Hardware Platform}
+In order to control the power to other devices(i.e. Television or Computer), some analog power control is needed. Typically this is controlled by an embedded microcontroller\fixme{If this is typical, we need a source}, therefore the choice of hardware platform is to pick the best microcontroller for the project. During development a development board is usually used. A development board is a single printed circuit board with a microcontroller and everything needed to get the microcontroller running. Every I/O\footnote{Input/Output}(generally General-purpose I/O) of the microcontroller is also made easily available using group pins. Picking a hardware platform is then condensed into picking a development board. Following is a comparison of a few different development boards.
 
 \subsubsection{Arduino}
 Arduino development boards come in a few variations, but common among all but one of them is that they are based on Atmel microcontrollers. Along with the development boards, Arduino also comes with its own software library \texttt{Wiring} which simplifies common I/O tasks. The Arduino development boards also implement a standard called \texttt{shields}, which are expansion circuit boards with pin headers that fit onto development boards, with additional pins so that shields can be stacked. This makes the hardware platform easily extendable and flexible using this stacking system. Examples of shields could be GPS, Ethernet, LCD displays or breadboards.
@@ -19,7 +19,7 @@ Raspberry Pi, unlike Arduino and Teensy uses a ``full-sized'' ARM processor, whi
 \subsection{Conclusion - Platform}
 In conclusion the platform chosen is Arduino. Arduino was chosen because the university already has those development boards, which means that no time is wasted getting another platform approved and bought. Arduino was also chosen because of their shield design, which enables the use of a Ethernet shield as well as a RFID shield. Some of the group members has also already worked with Arduino, which means a lower learning curve.
 
-\subsection{Hardware Identification}
+\section{Hardware Identification}
 In order for the person using the system to identify themselves, there has to be some form of hardware identification. This hardware identification has to be unique for that person, so that the system can find out the allowed time of the desired activity. Several factors have to be considered when choosing what hardware identification method to use, such as cost, user friendliness and security. Following is a comparison between some of the hardware identification methods available.
 
 \subsubsection{RFID}
@@ -36,3 +36,12 @@ Iris Recognition is a method of scanning and comparing the iris of two eyes. Alt
 
 \subsection{Conclusion - Identification}
 In conclusion the identification chosen is RFID. RFID was originally not chosen, instead NFC was chosen. The reason for choosing RFID was that it was what the university already had, and all of the practices of used with RFID can be translated unto NFC. The reason for choosing NFC over RFID, is that it is a well defined standard, it is compatible with the technology used in smartphones and it is short range so no accidental reads happen. The reason for choosing NFC/RFID over fingerprint is that the security of fingerprints is not that good and the possibility of a child's fingerprint changing too much. The reason for choosing NFC/RFID over iris is primarily cost, as the cost of a high quality camera is too much as multiple cameras would be needed.
+
+\section{Servers}
+In order to maintain the wast amount of information collected from the users and in order to offer a graphical interface to add rules, permissions and chores to the system a server setup will be needed.\\
+We here list the pros and cons of having a private home server versus having a single global server, maintained by the manufacturer of the system.
+
+\subsection{Private Home Server}
+\fixme{LARS: I'm gonna need some help writing down the pros and cons here.}
+
+\subsection{Global Server}
