1. update med permissions

--- a/report/text/overALLImplementation.tex
+++ b/report/text/overALLImplementation.tex
@@ -1,4 +1,13 @@
 \chapter{MOM Implementation}
 
 In the previous chapters we looked at the design and implementation of the different system part there are in the Media-Online Management (MOM).
-In this chapter we are going to show how it all  
+In this chapter we are going to show how it all of the parts are working together.
+
+
+
+
+
+upsummere Controller 
+upsummere Web interface
+upsummere API
+upsummere Daemon
