added oversigt implmentation

--- a/report/draft.tex
+++ b/report/draft.tex
@@ -49,6 +49,7 @@
 	\input{text/api.tex}
 	\input{text/ArduinoDesign.tex}
 	\input{text/websiteImplementationAndDesign.tex}
+	\input{text/overALLImplementation.tex}
 
 	%Part Perspective
 	\part{Perspective}
